@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4IntersectingCone.hh,v 1.1 2000-04-07 10:56:27 gcosmo Exp $
+// $Id: G4IntersectingCone.hh,v 1.2 2000-09-12 07:34:16 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -19,7 +19,9 @@
 //
 //   Utility class which calculates the intersection
 //   of an arbitrary line with a fixed cone
-//
+
+// Author: 
+//   David C. Williams (davidw@scipp.ucsc.edu)
 // --------------------------------------------------------------------
 
 #ifndef G4IntersectingCone_hh
