@@ -1,4 +1,4 @@
-$Id: History,v 1.10 2000-06-27 16:20:11 gcosmo Exp $
+$Id: History,v 1.11 2000-09-12 07:34:02 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+12-Sep-2000, G.Cosmo  (geom-solids-specific-V02-00-00)
+--------------------
+- Organised comments to headers for Software Reference Manual.
 
 27-Jun-2000, G.Cosmo  (geom-solids-specific-V01-01-02)
 --------------------
